购物车表格数据加载，合计、结算未完成

--- a/css/shopping-cart.css
+++ b/css/shopping-cart.css
@@ -85,6 +85,10 @@ input[type="number"]{
     color: #ff3328;
 }
 
+.cart_item_table tr.act{
+    background: #ff33281a;
+}
+
 .block{
     display: block;
 }
