--- a/css/shopping-cart.css
+++ b/css/shopping-cart.css
@@ -96,3 +96,20 @@ input[type="number"]{
     color: #999;
     text-decoration: line-through;
 }
+.common_handler{
+    position: relative;
+    width: 100%;
+    padding: 0 170px 0 10px;
+}
+
+.common_handler input[type="checkbox"]{
+    margin: 0 8px 0 0;
+}
+#go_to_order{
+    height: 39px;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    box-shadow: 0px 0px 3px 0px #ff3328;
+}
